--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "url": "git://github.com/cgross/angular-prompt.git"
   },
   "devDependencies": {
-    "grunt": "~0.4.4",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-jasmine": "~0.6.3",
-    "grunt-contrib-concat": "~0.4.0",
+    "grunt": "^0.4.5",
     "grunt-angular-templates": "~0.5.4",
+    "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-connect": "~0.7.1",
+    "grunt-contrib-jasmine": "~0.6.3",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
     "load-grunt-tasks": "~0.4.0"
   },
